[gd_scene load_steps=9 format=3 uid="uid://5axs5hevp14l"]

[ext_resource type="Script" uid="uid://c4s7owm6anmqd" path="res://Scenes_level/level_2/player_fly/bullet_2.gd" id="1_ksuon"]
[ext_resource type="Texture2D" uid="uid://c5xus2n043k3m" path="res://Scenes_level/level_2/player_fly/assets/M2.tres" id="2_eauit"]
[ext_resource type="Texture2D" uid="uid://ceo3v6lkkaedg" path="res://Scenes_level/level_2/player_fly/assets/M1.tres" id="3_qb4mb"]
[ext_resource type="Texture2D" uid="uid://ch5etswbdtj50" path="res://Scenes_level/level_2/player_fly/assets/M3.tres" id="4_qb4mb"]

[sub_resource type="Animation" id="Animation_ksuon"]
resource_name = "Idle"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("M1:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.000816801),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.03, 0.03)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("M1:z_index")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.000816801, 0.0370355),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [3, 1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("M3:z_index")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.000816801, 0.0370355, 0.0599575, 0.1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 2]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("M2:z_index")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.000816801, 0.0370355, 0.0599575, 0.080101, 0.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [2, 3, 2, 2, 3]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("M2:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.0370355, 0.080101, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.06, 0.06), Vector2(0.06, 0.06), Vector2(0.08, 0.08)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("M3:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.0599575, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.08, 0.08), Vector2(0.06, 0.06)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CollisionShape2D:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.0370355, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1.048), Vector2(1.7, 1.782), Vector2(2.3, 2.41)]
}

[sub_resource type="Animation" id="Animation_eauit"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("M1:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.03, 0.03)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("M1:z_index")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("M3:z_index")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("M2:z_index")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("M2:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.06, 0.06)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("M3:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.08, 0.08)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CollisionShape2D:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.4, 1.467)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qb4mb"]
_data = {
&"Idle": SubResource("Animation_ksuon"),
&"RESET": SubResource("Animation_eauit")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_5uruc"]
radius = 0.714286

[node name="bullet_2" type="Area2D" groups=["bullet"]]
scale = Vector2(1.02778, 1.02778)
collision_layer = 2
collision_mask = 2048
script = ExtResource("1_ksuon")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(3.55271e-15, 3.00927e-36)
scale = Vector2(0.12, 0.12)

[node name="Timer_disappear" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_qb4mb")
}

[node name="M1" type="Sprite2D" parent="."]
z_index = 3
position = Vector2(-4.76837e-07, 5.96046e-08)
scale = Vector2(0.03, 0.03)
texture = ExtResource("3_qb4mb")

[node name="M2" type="Sprite2D" parent="."]
z_index = 2
position = Vector2(-2.38419e-07, 0)
scale = Vector2(0.06, 0.06)
texture = ExtResource("2_eauit")

[node name="M3" type="Sprite2D" parent="."]
z_index = 1
scale = Vector2(0.08, 0.08)
texture = ExtResource("4_qb4mb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 5
rotation = 3.14159
scale = Vector2(1.4, 1.467)
shape = SubResource("CircleShape2D_5uruc")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="Timer_disappear" to="." method="_on_timer_disappear_timeout"]
